# odensPricingAssist

./: .gitignore  README.md
odens_Backend/: main.py  pyproject.toml  requirements.txt
odens_Backend/auth/: auth_utils.py
odens_Backend/data/bilal/: quotes_features.csv
odens_Backend/database/: users.py
odens_Backend/ml_models/bilal/: xgboost_model.json
odens_Backend/models/: user.py
odens_Backend/routes/: auth.py  health.py  predict.py  user.py
odens_Backend/schemas/: quote_schema.py
odens_PriceAssistant/: dataIns.py  main.py  pyproject.toml  requirements.txt
odens_PriceAssistant/data/LMEAlumData for 2024-25/: website.txt
odens_PriceAssistant/models/user_alpha/: model_metadata.json
odens_PriceAssistant/schemas/: quote_training_schema.py
odens_PriceAssistant/scripts/: analyze_50_quotes_data.py  augment_quotes.py  extract_features.py  extract_pdf_quotes.py  ml_model_training.py  predict_real_quotes.py  validate_quotes.py
