[project]
name = "odens-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "joblib==1.5.1",
    "jose==1.0.0",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.11.5",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uvicorn[standard]==0.34.3",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "xgboost==3.0.2",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "python-jose[cryptography]==3.5.0",
    "cffi==1.17.1",
    "cryptography==45.0.3",
    "ecdsa==0.19.1",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "rsa==4.9.1",
    "python-multipart>=0.0.20",
]
